--- a/About.html
+++ b/About.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        2200 Como Avenue SE Minneapolis, MN 55414
-            Call for take out 612-331-1053
+        <link rel="stylesheet" href="ManningsStyle.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
     <section>
-        <a href="LocationAndHours.html"> Location and Hours </a>
+        <p>
+            2200 Como Avenue SE Minneapolis, MN 55414
+            Call for take out 612-331-1053
+        </p>
+        <img src="ManningsAttributes/Liner.png">
+        <a href="LocationAndHours.html"> Location and Hours 
+        </a>
         <a href="Menu.html"> Menu </a>
         <a href="Bar.html"> Bar </a>
         <a href="About.html"> About </a>
@@ -59,5 +67,6 @@
             <a href="Bar.html"> Bar </a>
             <a href="About.html"> About </a>
         </section>
+        <img src="ManningsAttributes/FooterImage.png">
     </footer>
 </html>
