--- a/LocationAndHours.html
+++ b/LocationAndHours.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html>
     <head>
-        2200 Como Avenue SE Minneapolis, MN 55414
-            Call for take out 612-331-1053
+            <link rel="stylesheet" href="ManningsStyle.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
     <section>
-        <a href="LocationAndHours.html"> Location and Hours </a>
-        <a href="Menu.html"> Menu </a>
-        <a href="Bar.html"> Bar </a>
-        <a href="About.html"> About </a>
+        <div class="wrapper">
+            <p3>  2200 Como Avenue SE Minneapolis, MN 55414
+            </p3>
+            <p3>  Call for take out 612-331-1053
+            </p3>
+        </div>
+        <div>
+        <img src="ManningsAttributes/Liner.png" class="w-100">
+        <div class="container">
+            <a href="LocationAndHours.html"> Location and Hours 
+                <img src="ManningsAttributes/Location.png" class="w-10">
+            </a>
+            <a href="Menu.html"> Menu 
+                <img src="ManningsAttributes/burger.png" class="w-10">
+            </a>
+            <a href="Bar.html"> Bar 
+                <img src="ManningsAttributes/beer.png" class="w-10">
+            </a>
+            <a href="About.html"> About 
+                <img src="ManningsAttributes/information-button.png" class="w-10">
+            </a>
+        </div>
+        <img src="ManningsAttributes/Devider 2.png" class = "w-100">
     </section>
-    <body>
-        <h1>Location</h1>
-        <section>
-            <div>
-                <p>
-                    2200 Como Avenue SE Minneapolis, MN 55414
-                </p>
-                <p>
-                    Manning’s Restaurant is located on the corner of Como and 22nd Av SE, 1 mile west of Hwy 280 on Como, between the U of M Minneapolis and St. Paul campuses.
-                </p>
-            </div>
-        </section>
-    </body>
-    <body>
-        <h1>Hours of Operation</h1>
-        <section>
+    <section class="container">
+            <body>
+                <h1>Location</h1>
+                <img src="ManningsAttributes/Location.png" class="w-10">
+                <img src="ManningsAttributes/TitleLiner.png">
+                <section>
+                    <div>
+                        <p>
+                            2200 Como Avenue SE Minneapolis, MN 55414
+                        </p>
+                        <p>
+                            Manning’s Restaurant is located on the corner of Como and 22nd Av SE, 1 mile west of Hwy 280 on Como, between the U of M Minneapolis and St. Paul campuses.
+                        </p>
+                    </div>
+                </section>
+            </body>
+        <img src="ManningsAttributes/Middle Line 1.png">
+        <body>
+            <h1>Hours of Operation</h1>
+            <img src="ManningsAttributes/TitleLiner.png">
             <div>
                 <p>
                     Monday – Thursday: 8:30am – 11:00pm
@@ -44,17 +69,25 @@
                 </p>
             </div>
             <div>
-                 <img src="ManningsAttributes/image-from-rawpixel-id-16912083-png.png">
+                    <img src="ManningsAttributes/image-from-rawpixel-id-16912083-png.png">
             </div>
-
-        </section>
-    </body>
+        </body>
+    </section>
     <footer>
-        <section>
-            <a href="LocationAndHours.html"> Location and Hours </a>
-            <a href="Menu.html"> Menu </a>
-            <a href="Bar.html"> Bar </a>
-            <a href="About.html"> About </a>
-        </section>
+        <img src="ManningsAttributes/Devider 2.png">
+        <div class="container">
+            <a href="LocationAndHours.html"> Location and Hours 
+                <img src="ManningsAttributes/Location.png" class="w-10">
+            </a>
+            <a href="Menu.html"> Menu 
+                <img src="ManningsAttributes/burger.png" class="w-10">
+            </a>
+            <a href="Bar.html"> Bar 
+                <img src="ManningsAttributes/beer.png" class="w-10">
+            </a>
+            <a href="About.html"> About 
+                <img src="ManningsAttributes/information-button.png" class="w-10">
+            </a>
+        </div>
     </footer>
 </html>
