--- a/Menu.html
+++ b/Menu.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        2200 Como Avenue SE Minneapolis, MN 55414
-            Call for take out 612-331-1053
+        <link rel="stylesheet" href="ManningsStyle.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
     <section>
+        <p>
+            2200 Como Avenue SE Minneapolis, MN 55414
+            Call for take out 612-331-1053
+        </p>
+        <img src="ManningsAttributes/Liner.png">
         <a href="LocationAndHours.html"> Location and Hours </a>
         <a href="Menu.html"> Menu </a>
         <a href="Bar.html"> Bar </a>
@@ -13,33 +20,32 @@
     <img src="ManningsAttributes/Food12.jpg">
     <img src="ManningsAttributes/Food07.jpg">
     <img src="ManningsAttributes/Food05.jpg">
+    <section>
+        <div>
+            <h1>
+                Starters
+            </h1>
+        </div>
+        <div>
+            <h2>
+                Whole Wings
+            </h2>
+        </div>
+        <div>
+            <p3>
+                (6pc) $10.95 (10pc) $14.99
+            </p3>
+        </div>
+            <p2>
+                Choose From These Flavors: Buffalo, BBQ, Sweet Chili, Teriyaki, Garlic Parm, Honey Chipotle
+            </p2>
+        </div>
+    </section>
     <footer>
-        <section>
-            <a href="LocationAndHours.html"> Location and Hours </a>
-            <a href="Menu.html"> Menu </a>
-            <a href="Bar.html"> Bar </a>
-            <a href="About.html"> About </a>
-        </section>
-        <section>
-            <div>
-                <h1>
-                    Starters
-                </h1>
-            </div>
-            <div>
-                <h2>
-                    Whole Wings
-                </h2>
-            </div>
-            <div>
-                <p3>
-                    (6pc) $10.95 (10pc) $14.99
-                </p3>
-            </div>
-                <p2>
-                    Choose From These Flavors: Buffalo, BBQ, Sweet Chili, Teriyaki, Garlic Parm, Honey Chipotle
-                </p2>
-            </div>
-        </section>
+        <a href="LocationAndHours.html"> Location and Hours </a>
+        <a href="Menu.html"> Menu </a>
+        <a href="Bar.html"> Bar </a>
+        <a href="About.html"> About </a>
+        <img src="ManningsAttributes/FooterImage.png">
     </footer>
 </html>
