--- a/Bar.html
+++ b/Bar.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
+    <html>
     <head>
-        2200 Como Avenue SE Minneapolis, MN 55414
-            Call for take out 612-331-1053
+        <link rel="stylesheet" href="ManningsStyle.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
     <section>
+        <p>
+            2200 Como Avenue SE Minneapolis, MN 55414
+            Call for take out 612-331-1053
+        </p>
+        <img src="ManningsAttributes/Liner.png">
         <a href="LocationAndHours.html"> Location and Hours </a>
         <a href="Menu.html"> Menu </a>
         <a href="Bar.html"> Bar </a>
         <a href="About.html"> About </a>
-    </section>
-    <section>
-        <img src="ManningsAttributes/image-from-rawpixel-id-13271230-png.png">
-        <h1>
-            Cheers!
-        </h1>
-        <img src="ManningsAttributes/image-from-rawpixel-id-13271230-png copy.png">
     </section>
     <section>
         <p>
@@ -34,6 +35,7 @@
             <a href="Menu.html"> Menu </a>
             <a href="Bar.html"> Bar </a>
             <a href="About.html"> About </a>
+            <img src="ManningsAttributes/FooterImage.png">
         </section>
     </footer>
 </html>
