--- a/Bar.html
+++ b/Bar.html
@@ -8,34 +8,64 @@
         <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
     <section>
-        <p>
-            2200 Como Avenue SE Minneapolis, MN 55414
-            Call for take out 612-331-1053
-        </p>
-        <img src="ManningsAttributes/Liner.png">
-        <a href="LocationAndHours.html"> Location and Hours </a>
-        <a href="Menu.html"> Menu </a>
-        <a href="Bar.html"> Bar </a>
-        <a href="About.html"> About </a>
+        <div class="wrapper">
+            <p3>  2200 Como Avenue SE Minneapolis, MN 55414
+            </p3>
+            <p3>  Call for take out 612-331-1053
+            </p3>
+        </div>
+        <div>
+        <img src="ManningsAttributes/Liner.png" class="w-100">
+        <div class="container">
+            <a href="LocationAndHours.html"> Location and Hours 
+                <img src="ManningsAttributes/Location.png" class="w-10">
+            </a>
+            <a href="Menu.html"> Menu 
+                <img src="ManningsAttributes/burger.png" class="w-10">
+            </a>
+            <a2> Bar 
+                <img src="ManningsAttributes/beer.png" class="w-10">
+            </a2>
+            <a href="About.html"> About 
+                <img src="ManningsAttributes/information-button.png" class="w-10">
+            </a>
+        </div>
+        <img src="ManningsAttributes/Devider 2.png" class = "w-100">
     </section>
-    <section>
-        <p>
+    <div class="container4">
+            <img src="ManningsAttributes/handleft.png" class="w-20">
+            <h1>Cheers!</h1>
+            <img src="ManningsAttributes/handright.png" class="w-20">
+    </div>
+    <img src="ManningsAttributes/Devider 2.png" class="w-100">
+
+    <div class="container5">
+        <pcenter>
             Manning’s is the friendly neighborhood bar right down the street. We take pride in our great tasting beer – we clean the lines every night! Signature cocktails include everything from the standard Bloody Mary to a crisp Martini. Enjoy a glass of wine on the patio or stop in for drink specials during happy hour. Since 1932 Manning’s has been the place on Como for good times.   
-        </p>
-    </section>
-    <section>
-        <img src="ManningsAttributes/Popcorn01.jpg">
-        <img src="ManningsAttributes/Bar01.jpg">
-        <img src="ManningsAttributes/Bar02.jpg">
-        <img src="ManningsAttributes/Food04.jpg">
-    </section>
+        </pcenter>
+    </div>
+    <div class="container6">
+        <img src="ManningsAttributes/Devider 2.png" class="w-100">
+    </div>
+    <div class="container6">
+        <img src="ManningsAttributes/Bar Photos.png" class="w-100">
+    </div>
     <footer>
-        <section>
-            <a href="LocationAndHours.html"> Location and Hours </a>
-            <a href="Menu.html"> Menu </a>
-            <a href="Bar.html"> Bar </a>
-            <a href="About.html"> About </a>
-            <img src="ManningsAttributes/FooterImage.png">
-        </section>
+        <img src="ManningsAttributes/Devider 2.png" class="w-100">
+        <div class="container">
+            <a href="LocationAndHours.html"> Location and Hours 
+                <img src="ManningsAttributes/Location.png" class="w-10">
+            </a>
+            <a href="Menu.html"> Menu 
+                <img src="ManningsAttributes/burger.png" class="w-10">
+            </a>
+            <a href="Bar.html"> Bar 
+                <img src="ManningsAttributes/beer.png" class="w-10">
+            </a>
+            <a href="About.html"> About 
+                <img src="ManningsAttributes/information-button.png" class="w-10">
+            </a>
+        </div>
+        <img src="ManningsAttributes/FooterImage.png" class="w-100">
     </footer>
 </html>
