--- a/LocationAndHours.html
+++ b/LocationAndHours.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <link rel="stylesheet" href="ManningsStyle.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="ManningsStyle.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
+
     <section>
         <div class="wrapper">
             <p3>  2200 Como Avenue SE Minneapolis, MN 55414
@@ -16,9 +17,9 @@
         <div>
         <img src="ManningsAttributes/Liner.png" class="w-100">
         <div class="container">
-            <a href="LocationAndHours.html"> Location and Hours 
+            <a2> Location and Hours
                 <img src="ManningsAttributes/Location.png" class="w-10">
-            </a>
+            </a2> 
             <a href="Menu.html"> Menu 
                 <img src="ManningsAttributes/burger.png" class="w-10">
             </a>
@@ -31,50 +32,75 @@
         </div>
         <img src="ManningsAttributes/Devider 2.png" class = "w-100">
     </section>
-    <section class="container">
-            <body>
+
+    <div class="container2">
+        <div class = "column">
+            <div class="container2">
                 <h1>Location</h1>
-                <img src="ManningsAttributes/Location.png" class="w-10">
-                <img src="ManningsAttributes/TitleLiner.png">
-                <section>
-                    <div>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <img src="ManningsAttributes/TitleLiner.png" class="w-100">
+                    </li>
+                    <li>
                         <p>
                             2200 Como Avenue SE Minneapolis, MN 55414
                         </p>
+                    </li>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5643.6614731955915!2d-93.221344!3d44.987749500000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32cfe04ef8c25%3A0x21aef14cb6b578f2!2sManning%E2%80%99s%20Restaurant%20%26%20Bar!5e0!3m2!1sen!2sus!4v1741102811289!5m2!1sen!2sus" 
+                        width="100%" 
+                        height="250" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                    <li>
                         <p>
                             Manning’s Restaurant is located on the corner of Como and 22nd Av SE, 1 mile west of Hwy 280 on Como, between the U of M Minneapolis and St. Paul campuses.
                         </p>
-                    </div>
-                </section>
-            </body>
-        <img src="ManningsAttributes/Middle Line 1.png">
-        <body>
-            <h1>Hours of Operation</h1>
-            <img src="ManningsAttributes/TitleLiner.png">
-            <div>
-                <p>
-                    Monday – Thursday: 8:30am – 11:00pm
-                </p>
-                <p>
-                    <div>
-                    Friday: 8:30am – 2:00am 
-                    </div>
-                    <div>
-                    Saturday: 8:00am – 2:00am 
-                    </div>
-                    <div>
-                    Sunday: 8:00am – 11:00pm.
-                    </div>
-                    <div>
-                </p>
+                    </li>
+                </ul>
             </div>
-            <div>
+        </div>
+        <div class = "column">
+            <div class="container2">
+                <h1>Hours of Operation</h1>
+            </div>
+            <ul>
+                <li>
+                    <img src="ManningsAttributes/TitleLiner.png" class="w-100">
+                </li>
+                <li>
+                    <p>
+                        Monday – Thursday: 8:30am – 11:00pm
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Friday: 8:30am – 2:00am
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Saturday: 8:00am – 2:00am
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Sunday: 8:00am – 11:00pm
+                    </p>
+                </li>
+                <li img>
                     <img src="ManningsAttributes/image-from-rawpixel-id-16912083-png.png">
-            </div>
-        </body>
-    </section>
+                </li img>
+            </ul>
+        </div>
+    </div>
+    
     <footer>
-        <img src="ManningsAttributes/Devider 2.png">
+        <img src="ManningsAttributes/Devider 2.png" class="w-100">
         <div class="container">
             <a href="LocationAndHours.html"> Location and Hours 
                 <img src="ManningsAttributes/Location.png" class="w-10">
@@ -89,5 +115,6 @@
                 <img src="ManningsAttributes/information-button.png" class="w-10">
             </a>
         </div>
+        <img src="ManningsAttributes/FooterImage.png" class="w-100">
     </footer>
 </html>
