--- a/About.html
+++ b/About.html
@@ -7,66 +7,99 @@
         <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Young+Serif&display=swap" rel="stylesheet">
     </head>
     <section>
-        <p>
-            2200 Como Avenue SE Minneapolis, MN 55414
-            Call for take out 612-331-1053
-        </p>
-        <img src="ManningsAttributes/Liner.png">
-        <a href="LocationAndHours.html"> Location and Hours 
-        </a>
-        <a href="Menu.html"> Menu </a>
-        <a href="Bar.html"> Bar </a>
-        <a href="About.html"> About </a>
+        <div class="wrapper">
+            <p3>  2200 Como Avenue SE Minneapolis, MN 55414
+            </p3>
+            <p3>  Call for take out 612-331-1053
+            </p3>
+        </div>
+        <div>
+        <img src="ManningsAttributes/Liner.png" class="w-100">
+        <div class="container">
+            <a href="LocationAndHours.html"> Location and Hours 
+                <img src="ManningsAttributes/Location.png" class="w-10">
+            </a>
+            <a href="Menu.html"> Menu 
+                <img src="ManningsAttributes/burger.png" class="w-10">
+            </a>
+            <a href="Bar.html"> Bar 
+                <img src="ManningsAttributes/beer.png" class="w-10">
+            </a>
+            <a2> About 
+                <img src="ManningsAttributes/information-button.png" class="w-10">
+            </a2>
+        </div>
+        <img src="ManningsAttributes/Devider 2.png" class = "w-100">
     </section>
     <section>
-        <h1>
+        <h1 class="container2">
             About Us
         </h1>
-        <div>
-            <p>
+        <img src="ManningsAttributes/Devider 2.png" class = "w-100">
+        <div class="container5">
+            <pcenter>
                 “We have regular customers of over 50 years, and employees that have worked here for over a decade, with some as long as 30+ years! At Manning's, we believe that customer & employee loyalty is our GREATEST asset!”
-            </p>
+            </pcenter>
         </div>
+        <img src="ManningsAttributes/Devider 2.png" class = "w-100">
     </section>
-    <section>
+    <section class="container2">
         <img src="ManningsAttributes/Bar03.jpg">
     </section>
-    <section>
-        <h1>
-            Our Story
-        </h1>
-        <div>
-            <img src="ManningsAttributes/Horse.jpg">
+    <img src="ManningsAttributes/Devider 2.png" class = "w-100">
+
+    <div class="container2">
+        <div class = "column">
+            <h1>Our Story</h1>
+            <ul>
+                <li>
+                    <img src="ManningsAttributes/Horse.jpg">
+                </li>
+                <li>
+                    <img src="ManningsAttributes/TitleLiner.png">
+                </li>
+                <li>
+                    <p>
+                        Ralph Manning bought the grocery store at 22nd and Como and moved his family of eight to Minneapolis in 1927 after their fishing resort in Quebec was destroyed by fire. He housed his family in the apartment upstairs, and they delivered groceries by horse cart. There was a barn for the horse and ice storage and the store even had a fountain. On June 2, 1932 Manning’s Cafe opened, after Ralph turned the grocery store into a tavern serving beer and hamburgers.
+                    </p>
+                </li>
+            </ul>
+        </div><div class = "column">
+            <ul>
+                <li>
+                    <p>
+                        Around 1949 Ralph’s son, Ed, left Schafer’s Grocery in Dinkytown and took over for his father. In 1958 Manning’s added a full kitchen to the building, allowing the menu to be expanded to include fried chicken and steak. Before then kitchen had been just a grill and refrigerator behind the bar. In 1977, the kitchen was expanded again, quadrupling the size of the old one! Ed’s son, Larry now runs Manning’s.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        For years Manning’s has been famous for great popcorn. Ed charged a penny a bowl, saying he would charge that penny until the machine was paid for… that was 4 popcorn machines ago! Manning’s pops about five tons of popcorn per year. It is rumored that many college students have lived on free popcorn and beer at Manning’s over the years.                    </p>
+                </li>
+                <li>
+                    <p>
+                        In the early years Manning’s served only 3.2 beer. Strong beer and wine was added in 1987 and in 2005 a full liquor bar was added to compliment their famous draft beer… And yes, the beer lines are still cleaned every night!
+                    </p>
+                </li>
+            </ul>
         </div>
-        <div>
-            <p>
-                Ralph Manning bought the grocery store at 22nd and Como and moved his family of eight to Minneapolis in 1927 after their fishing resort in Quebec was destroyed by fire. He housed his family in the apartment upstairs, and they delivered groceries by horse cart. There was a barn for the horse and ice storage and the store even had a fountain. On June 2, 1932 Manning’s Cafe opened, after Ralph turned the grocery store into a tavern serving beer and hamburgers.
-            </p>
-        </div>
-        <div>
-            <p>
-                Around 1949 Ralph’s son, Ed, left Schafer’s Grocery in Dinkytown and took over for his father. In 1958 Manning’s added a full kitchen to the building, allowing the menu to be expanded to include fried chicken and steak. Before then kitchen had been just a grill and refrigerator behind the bar. In 1977, the kitchen was expanded again, quadrupling the size of the old one! Ed’s son, Larry now runs Manning’s.
-            </p>
-        </div>
-        <div>
-            <p>    
-                For years Manning’s has been famous for great popcorn. Ed charged a penny a bowl, saying he would charge that penny until the machine was paid for… that was 4 popcorn machines ago! Manning’s pops about five tons of popcorn per year. It is rumored that many college students have lived on free popcorn and beer at Manning’s over the years.
-            </p>
-        </div>
-        <div>
-            <p>
-        
-                In the early years Manning’s served only 3.2 beer. Strong beer and wine was added in 1987 and in 2005 a full liquor bar was added to compliment their famous draft beer… And yes, the beer lines are still cleaned every night!
-            </p>
-        </div>
-    </section>
+    </div>
+
     <footer>
-        <section>
-            <a href="LocationAndHours.html"> Location and Hours </a>
-            <a href="Menu.html"> Menu </a>
-            <a href="Bar.html"> Bar </a>
-            <a href="About.html"> About </a>
-        </section>
-        <img src="ManningsAttributes/FooterImage.png">
+        <img src="ManningsAttributes/Devider 2.png" class="w-100">
+        <div class="container">
+            <a href="LocationAndHours.html"> Location and Hours 
+                <img src="ManningsAttributes/Location.png" class="w-10">
+            </a>
+            <a href="Menu.html"> Menu 
+                <img src="ManningsAttributes/burger.png" class="w-10">
+            </a>
+            <a href="Bar.html"> Bar 
+                <img src="ManningsAttributes/beer.png" class="w-10">
+            </a>
+            <a href="About.html"> About 
+                <img src="ManningsAttributes/information-button.png" class="w-10">
+            </a>
+        </div>
+        <img src="ManningsAttributes/FooterImage.png" class="w-100">
     </footer>
 </html>
